--- a/Chapter04_FirstWebScraper.ipynb
+++ b/Chapter04_FirstWebScraper.ipynb
@@ -22,9 +22,16 @@
    ],
    "source": [
     "from urllib.request import urlopen\n",
+    "import ssl\n",
+    "import urllib.request\n",
+    "import certifi\n",
     "\n",
-    "html = urlopen('http://pythonscraping.com/pages/page1.html')\n",
-    "print(html.read())  "
+    "url = 'https://pythonscraping.com/pages/page1.html'\n",
+    "context = ssl.create_default_context(cafile=certifi.where())\n",
+    "context = ssl._create_default_https_context()\n",
+    "response = urllib.request.urlopen(url, context=context)\n",
+    "data = response.read()\n",
+    "print(data)"
    ]
   },
   {
